--- a/index.html
+++ b/index.html
@@ -23,8 +23,15 @@
 
     <!-- Sky -->
     <div class="sky">
-      <div class="firework" id="firework1"></div>
-      <div class="firework" id="firework2"></div>
+      <img src="clouds.jpg" alt="Clouds" class="clouds"/>
+      <img src="eagle.jpg" alt="Eagle" class="eagle"/>
+      <img src="planes.jpg" alt="Planes" class="Planes"/>
+      <div class="firework" id="firework1">
+        <img src="blankFirework.gif" alt="Blank"/>
+      </div>
+      <div class="firework" id="firework2">
+         <img src="miniFireworks.gif" alt="Mini"/>
+      </div>
     </div>
 
     <!-- Lawn and Crowd -->
